[project]
name = "doc-search-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.57.0",
    "wikipedia>=1.4.0",
]
